Refactored warehouse domain, repository, and REST API:
- Replaced `ZonedDateTime` with `LocalDateTime` across models, repositories, and use cases.
- Added `replaceWarehouse` functionality with supporting REST endpoint and OpenAPI documentation.
- Enhanced `WarehouseStore` interface and repository to support `findByInternalId` and improve ID-based operations.
- Simplified repository model conversion methods.
- Updated integration and unit tests for CRUD operations, new replace functionality, and date/time changes.